--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,4 +56,4 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 blog.title=CloudFundoo
-blog.baseline=Raining Clouds...
+blog.baseline=Forming Clouds...
