--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -48,8 +48,9 @@ posts:
                     The model has a central position in a Play! application. It is the domain-specific 
                     representation of the information on which the application operates.
                     
-                    Martin fowler defines it as:
-                        
+                    
+                    Martin Fowler defines it as:
+                    
                     Responsible for representing concepts of the business, information about the 
                     business situation, and business rules. State that reflects the business situation 
                     is controlled and used here, even though the technical details of storing it are 
